# app/windows_identity.py
@@ -1,0 +1,127 @@
+"""Curated Windows identity catalogs for Sysprep unattend fields."""
+from __future__ import annotations
+
+# Microsoft Time Zone IDs (tzutil / unattend <TimeZone>).
+WINDOWS_TIMEZONES = (
+    'UTC',
+    'GMT Standard Time',
+    'Greenwich Standard Time',
+    'W. Europe Standard Time',
+    'Central Europe Standard Time',
+    'Central European Standard Time',
+    'Romance Standard Time',
+    'GTB Standard Time',
+    'FLE Standard Time',
+    'E. Europe Standard Time',
+    'Russia Time Zone 3',
+    'Russian Standard Time',
+    'Israel Standard Time',
+    'Middle East Standard Time',
+    'Arabian Standard Time',
+    'Iran Standard Time',
+    'India Standard Time',
+    'China Standard Time',
+    'Tokyo Standard Time',
+    'Korea Standard Time',
+    'AUS Eastern Standard Time',
+    'E. Australia Standard Time',
+    'New Zealand Standard Time',
+    'Pacific Standard Time',
+    'Mountain Standard Time',
+    'US Mountain Standard Time',
+    'Central Standard Time',
+    'Eastern Standard Time',
+    'US Eastern Standard Time',
+    'Atlantic Standard Time',
+    'Newfoundland Standard Time',
+    'Alaskan Standard Time',
+    'Hawaiian Standard Time',
+    'SA Pacific Standard Time',
+    'SA Eastern Standard Time',
+    'Argentina Standard Time',
+    'South Africa Standard Time',
+    'Egypt Standard Time',
+    'Singapore Standard Time',
+    'SE Asia Standard Time',
+)
+
+# Common Windows culture / locale IDs for International-Core.
+WINDOWS_LOCALES = (
+    'en-US',
+    'en-GB',
+    'en-AU',
+    'en-CA',
+    'de-DE',
+    'de-AT',
+    'de-CH',
+    'fr-FR',
+    'fr-BE',
+    'fr-CH',
+    'fr-CA',
+    'nl-NL',
+    'nl-BE',
+    'it-IT',
+    'it-CH',
+    'es-ES',
+    'es-MX',
+    'pt-PT',
+    'pt-BR',
+    'pl-PL',
+    'cs-CZ',
+    'sk-SK',
+    'hu-HU',
+    'ro-RO',
+    'hr-HR',
+    'sl-SI',
+    'bg-BG',
+    'sr-Latn-RS',
+    'uk-UA',
+    'ru-RU',
+    'tr-TR',
+    'el-GR',
+    'sv-SE',
+    'nb-NO',
+    'da-DK',
+    'fi-FI',
+    'ja-JP',
+    'ko-KR',
+    'zh-CN',
+    'zh-TW',
+)
+
+DEFAULT_TIMEZONE = 'Central European Standard Time'
+DEFAULT_LOCALE = 'en-US'
+DEFAULT_WORKGROUP = 'WORKGROUP'
+
+# Spec JSON keys that may be stored (never passwords).
+SPEC_ALLOWED_KEYS = frozenset({
+    'timezone',
+    'locale',
+    'workgroup',
+    'cores',
+    'ram',
+    'bridge',
+    'vlan',
+    'network_mode',
+    'ip_address',
+    'netmask_cidr',
+    'gateway',
+    'dns_servers',
+    'enable_ipv6',
+    'ipv6_address',
+    'ipv6_prefix',
+    'ipv6_gateway',
+    'join_domain',
+    'domain_profile',
+    'domain_ou',
+    'domain_name',
+    'manage_disks',
+    'disks',
+    'nics',
+})
+
+SPEC_SECRET_KEYS = frozenset({
+    'administrator_password',
+    'domain_password',
+    'domain_username',
+})
